Update ProgressionGUI.java